--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,49 +1,71 @@
-name: BrowserRDP
-on: workflow_dispatch
+- name: Download Myrtille MSI (auto detect latest)
+  shell: pwsh
+  run: |
+    # GitHub Releases API から最新リリースの資産を取得して *.msi を探す
+    $release = Invoke-RestMethod "https://api.github.com/repos/cedrozor/myrtille/releases/latest"
+    $asset = $release.assets | Where-Object { $_.name -like "*.msi" } | Select-Object -First 1
+    if (-not $asset) { Write-Error "❌ Myrtille MSI not found in latest release."; exit 1 }
+    Write-Host "Found MSI: $($asset.name)"
+    Invoke-WebRequest $asset.browser_download_url -OutFile Myrtille.msi
 
-jobs:
-  rdp:
-    runs-on: windows-latest
-    steps:
-      - name: Enable RDP and create user
-        run: |
-          Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -Name "fDenyTSConnections" -Value 0
-          Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
-          net user runner Password123! /add
-          net localgroup administrators runner /add
-          Write-Host "✅ RDP enabled and user created."
+- name: Install Myrtille MSI (silent)
+  shell: pwsh
+  run: |
+    # サイレントインストール（終了コードを確認）
+    $exit = Start-Process -FilePath msiexec.exe -ArgumentList '/i', (Resolve-Path Myrtille.msi), '/qn', '/norestart' -Wait -PassThru
+    if ($exit.ExitCode -ne 0) { Write-Error "❌ msiexec failed with exit code $($exit.ExitCode)"; exit $exit.ExitCode }
+    Write-Host "✅ Myrtille MSI installed (exit $($exit.ExitCode))."
 
-      - name: Download Myrtille (auto detect latest)
-        shell: pwsh
-        run: |
-          $release = Invoke-RestMethod "https://api.github.com/repos/cedrozor/myrtille/releases/latest"
-          $asset = $release.assets | Where-Object { $_.name -like "Myrtille-*.zip" } | Select-Object -First 1
-          if (-not $asset) { Write-Error "❌ Myrtille ZIP not found in latest release."; exit 1 }
-          Invoke-WebRequest $asset.browser_download_url -OutFile Myrtille.zip
-          Expand-Archive Myrtille.zip -DestinationPath C:\Myrtille
-          Write-Host "✅ Myrtille downloaded and extracted."
+- name: Find Myrtille install path & start services
+  shell: pwsh
+  run: |
+    # よくあるインストール先候補をチェックして実行バイナリを探す
+    $candidates = @(
+      'C:\Program Files\Myrtille',
+      'C:\Program Files (x86)\Myrtille',
+      'C:\Myrtille'
+    )
+    $installed = $candidates | Where-Object { Test-Path $_ } | Select-Object -First 1
+    if (-not $installed) {
+      # MSI が別パスに入った可能性がある -> MSI のプロパティを読んでみる
+      $installed = (Get-ItemProperty "HKLM:\SOFTWARE\Microsoft\Windows\CurrentVersion\Uninstall\*" | Where-Object { $_.DisplayName -like "*Myrtille*" } | Select-Object -First 1).InstallLocation
+    }
+    if (-not $installed) {
+      Write-Warning "⚠️ Myrtille install path not found automatically. Listing C:\\ for troubleshooting."
+      Get-ChildItem -Path C:\ -Directory -Depth 2 | Where-Object Name -like "*Myrtille*"
+      exit 0
+    }
+    Write-Host "Myrtille detected at: $installed"
 
-      - name: Start Myrtille Web + Services
-        run: |
-          cd C:\Myrtille
-          Start-Process -FilePath "C:\Myrtille\Myrtille.Services.exe"
-          Start-Process -FilePath "C:\Myrtille\Myrtille.Web.exe"
-          Write-Host "✅ Myrtille started on port 80."
+    # サービス／実行ファイルを起動
+    $svc = Join-Path $installed "Myrtille.Services.exe"
+    $web = Join-Path $installed "Myrtille.Web.exe"
 
-      - name: Download Cloudflared
-        shell: pwsh
-        run: |
-          Invoke-WebRequest https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-windows-amd64.exe -OutFile cloudflared.exe
-          Write-Host "✅ Cloudflared downloaded."
+    if (Test-Path $svc) {
+      Start-Process -FilePath $svc -NoNewWindow -PassThru | Out-Null
+      Write-Host "Started Myrtille.Services.exe"
+    } else {
+      Write-Warning "Myrtille.Services.exe not found at $svc"
+    }
 
-      - name: Start Cloudflare Tunnel
-        env:
-          CLOUDFLARED_TOKEN: ${{ secrets.CLOUDFLARED_TOKEN }}
-        shell: pwsh
-        run: |
-          .\cloudflared.exe service install $env:CLOUDFLARED_TOKEN
-          Start-Sleep -Seconds 10
-          Write-Host "🌐 Tunnel started — open your Cloudflare dashboard to get the public URL."
-          Write-Host "🪟 Then log in via Myrtille (browser RDP gateway)."
-          Write-Host "User: runner / Password: Password123!"
-          Write-Host "⚠️ The session will expire when the job ends (max ~6h)."
+    if (Test-Path $web) {
+      Start-Process -FilePath $web -NoNewWindow -PassThru | Out-Null
+      Write-Host "Started Myrtille.Web.exe"
+    } else {
+      Write-Warning "Myrtille.Web.exe not found at $web"
+    }
+
+- name: Download Cloudflared
+  shell: pwsh
+  run: |
+    Invoke-WebRequest https://github.com/cloudflare/cloudflared/releases/latest/download/cloudflared-windows-amd64.exe -OutFile cloudflared.exe
+    Write-Host "✅ Cloudflared downloaded."
+
+- name: Start Cloudflare Tunnel
+  env:
+    CLOUDFLARED_TOKEN: ${{ secrets.CLOUDFLARED_TOKEN }}
+  shell: pwsh
+  run: |
+    .\cloudflared.exe service install $env:CLOUDFLARED_TOKEN
+    Start-Sleep -Seconds 8
+    Write-Host "🌐 Tunnel attempted to start. Check Cloudflare Tunnels dashboard for the public URL."
